<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 메인메뉴를 정의합니다　-->
    <item
        android:id="@+id/item1"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/menu_item_title1" />

    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/menu_item_title2" />

    <!-- item 내에 menu를 중첩해 넣어 서브 메뉴를 정의합니다　-->
    <item
        android:title="@string/sub_menu_title">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/sub_menu_item1"
                android:title="@string/sub_menu_item_title1" />
            <item
                android:id="@+id/sub_menu_item2"
                android:title="@string/sub_menu_item_title2" />
        </menu>
    </item>

</menu>